k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ingress
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - welcome.local
      secretName: welcome-tls
  rules:
    - host: welcome.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: welcome-service
                port:
                  number: 5000
